# jirabot

./: .gitignore  README.md  jirabot-service.service  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python.yml
scripts/: build.sh  build_with_act.sh
src/jirabot/: config.py  log_helper.py  main.py  utils.py
src/jirabot/database/: db.py
src/jirabot/dialogs/: issue.py  jsql_request.py  other.py  registration.py
src/jirabot/jira/: client.py  worklogs.py
src/jirabot/states/: issue.py  registration.py  request.py
src/jirabot/ui/: common.py  filters.py  keyboard.py  text.py
