
[metadata]
name = jirabot
version = attr: jirabot.version.VERSION
author = Viacheslav
author_email = viacheslav@mcublog.ru
description = The Jira bot for Telegram.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mcublog/dpl_printer
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src

python_requires = >=3.11
install_requires =
    pylogus==0.1.0

[options.entry_points]
console_scripts =
    fitomac = dplprint.main:main

[options.packages.find]
where = src

exclude =
    build*
    env*
    venv*
    .venv*